# policy-claims-assistant

./: .gitignore  README.md
docs-search/: Dockerfile  DocsSearch.csproj  DocsSearch.http  Program.cs  README.md
docs-search/Properties/: launchSettings.json
docs/source-documents/: README.md
langgraph-assistant/: README.md  pyproject.toml
langgraph-assistant/LangGraphAssistant.Api/: LangGraphAssistant.Api.http  Program.cs  appsettings.json
langgraph-assistant/LangGraphAssistant.Api/Properties/: launchSettings.json
langgraph-assistant/app/: config.py  db.py  graph.py  main.py  models.py
semantic-search-assistant/: Program.cs  README.md  SemanticSearchAssistant.csproj  SemanticSearchAssistant.http  appsettings.json  docker-compose.yml
semantic-search-assistant/Ingestion/: ChunkStore.cs  EmbeddingGeneratorFactory.cs  EnvFile.cs  IngestionCommand.cs  IngestionOptions.cs  PdfTextExtractor.cs  TextChunker.cs
semantic-search-assistant/Properties/: launchSettings.json
semantic-search-assistant/Search/: ChatClientFactory.cs  PromptBuilder.cs  SearchModels.cs  SearchOptions.cs  SearchService.cs
semantic-search-assistant/db/: schema.sql
